final code using for and while loop

--- a/jagdeepC0744298/index.html
+++ b/jagdeepC0744298/index.html
@@ -10,11 +10,11 @@
     <script>
 
         var sum = 0;
-        for (var i = 117; i >= 11; i - 8) {
+        for (var i = 117; i >= 11; i -= 8) {
             sum += i;
             
         
-         } document.write("sum is" + sum);
+         } document.write("sum is" + sum+"<p>");
 
 
 
