--- a/jagdeepC0744298/index.html
+++ b/jagdeepC0744298/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>jagdeepC0744298</title>
     <link href="css/default.css" rel="stylesheet" />
-    
+    <link href="javascript/main.js"/>
 </head>
 <body>
     <script>
@@ -25,6 +25,10 @@
             j -= 8;
         }
         document.write("sum is" + s);
+
+       
+
     </script>
+
 </body>
 </html>
